syntax = "proto3";

option java_multiple_files = false;
option java_package = "gov.fnal.controls.service.proto.grpc";
option java_outer_classname = "DPMProto";

package dpm;

import "google/protobuf/empty.proto";
import "deviceinfo.proto";

service DPM {
    rpc OpenSession(google.protobuf.Empty) returns (stream SessionReply) {}
    rpc Authenticate(AuthRequest) returns (AuthReply) {}
    rpc ReadDevice(Device) returns (Reading) {}
    rpc StartAcquisition(RequestList) returns (stream Reading) {}

    rpc GetDeviceInfo(RequestList) returns (DeviceInfoList) {}
    rpc ApplySettings(SettingList) returns (StatusList) {}
}

message Result {
    oneof value {
        google.protobuf.Empty none = 1;
        string error = 2;
    }
}

message SessionReply {
    bytes sessionId = 1;
    string serviceName = 2;
}

message AuthRequest {
    bytes sessionId = 1;
    bytes token = 2;
}

message AuthReply {
    oneof step {
        bytes token = 1;
        Result result = 2;
    }
}

message Device {
    string name = 1;
}

message RequestList {
    bytes sessionId = 1;
    repeated string request = 2;
}

message DeviceInfoList {
    repeated gov.fnal.controls.DeviceInfo entry = 1;
}

message Data {
    message ScalarArray {
        repeated double values = 1;
    }

    message TextArray {
        repeated string values = 1;
    }

    message StructData {
        map<string, Data> values = 1;
    }

    oneof value {
        bool flag = 16;
        double scalar = 17;
        ScalarArray scalarArr = 18;
        bytes raw = 19;
        string text = 20;
        TextArray textArr = 21;
        StructData structData = 22;
    }
}

message Status {
    sint32 code = 1;
    string description = 2;
}

message Reading {
    uint64 timestamp = 1;
    uint32 index = 2;
    Data data = 3;
    Status status = 4;
}

message Setting {
    string name = 1;
    Data data = 2;
}

message SettingList {
    string sessionId = 1;
    repeated Setting setting = 2;
    string event = 3;
}

message StatusList {
    repeated Status status = 1;
}
