
syntax = "proto3";

option java_multiple_files = false;
option java_package = "gov.fnal.controls.service.proto.grpc";
option java_outer_classname = "DeviceInfoProto";

package dpm;

message DeviceInfo {
    message PropertyInfo {
        int32 pi = 1;
        int32 node = 2;
        int32 ftd = 3;
        bytes ssdn = 4;
        int32 size = 5;
        int32 defaultSize = 6;
        int32 atomicSize = 7;
        string defaultEvent = 8;
        bool nonLinear = 9;
        string foreignName = 10;
    }

    message ReadingProperty {
        message PrimaryScaling {
            string units = 1;
            int32 index = 2;
            int32 inputLength = 3;
        }
        
        message CommonScaling {
            string units = 1;
            int32 index = 2;
            repeated double constants = 3;
        }

        PropertyInfo pInfo = 1;
        optional PrimaryScaling primary = 2;
        optional CommonScaling common = 3;
    }

    int32 di = 1;
    string name = 2;
    string description = 3;

    optional ReadingProperty reading = 4;
}
